fix about on mobile

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -117,3 +117,11 @@
     margin: auto;
   }
 }
+
+@media screen and (width <= 450px) {
+  .about .bio-photo {
+    float: none;
+    width: 100%;
+    margin: 0 0 2em;
+  }
+}
